--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,21 +2,27 @@
   "compilerOptions": {
     "baseUrl": ".",
     "outDir": "build/dist",
+    "paths": {
+      "~src/*": ["src/*"]
+    },
     "module": "esnext",
     "target": "es5",
-    "lib": ["es6", "dom"],
+    "lib": ["es6", "es7", "es2017", "dom"],
     "sourceMap": true,
     "allowJs": true,
     "jsx": "react",
     "moduleResolution": "node",
     "rootDir": "src",
+    "downlevelIteration": true,
     "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
-    "strictNullChecks": true,
+    "noUnusedLocals": true,
+    "noFallthroughCasesInSwitch": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true
+    "experimentalDecorators": true
   },
   "exclude": [
     "node_modules",
