--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "react-scripts-ts": "2.16.0"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
+    "start": "react-app-rewired start --scripts-version react-scripts-ts",
+    "build": "react-app-rewired build --scripts-version react-scripts-ts",
+    "test": "react-app-rewired test --env=jsdom  --scripts-version react-scripts-ts ",
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
@@ -20,6 +20,7 @@
     "@types/node": "^10.5.2",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
+    "react-app-rewired": "^1.5.2",
     "typescript": "^2.9.2"
   }
 }
