--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/gapi.client.people": "^1.0.0",
     "@types/jest": "^23.3.0",
     "@types/node": "^10.5.2",
     "@types/react": "^16.4.6",
