--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.4.1",
+    "@material-ui/icons": "^2.0.0",
     "@reach/router": "^1.1.1",
+    "@types/gapi": "^0.0.36",
+    "@types/gapi.auth2": "^0.0.47",
     "@types/reach__router": "^1.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts-ts": "2.16.0"
+    "react-scripts-ts": "2.16.0",
+    "styled-components": "^3.3.3"
   },
   "scripts": {
     "start": "react-app-rewired start --scripts-version react-scripts-ts",
