--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,8 @@
     "acceptance-tests",
     "webpack",
     "jest",
-    "src/setupTests.ts"
+    "src/setupTests.ts",
+    "env-check-script.js",
+    "config-overrides.js"
   ]
 }
