--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/gapi": "^0.0.36",
     "@types/gapi.auth2": "^0.0.47",
     "@types/reach__router": "^1.0.0",
+    "classnames": "^2.2.6",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts-ts": "2.16.0",
@@ -21,6 +22,7 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.6",
     "@types/gapi.client.people": "^1.0.0",
     "@types/jest": "^23.3.0",
     "@types/node": "^10.5.2",
