--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "classnames": "^2.2.6",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts-ts": "2.16.0",
-    "styled-components": "^3.3.3"
+    "react-scripts-ts": "2.16.0"
   },
   "scripts": {
     "start": "react-app-rewired start --scripts-version react-scripts-ts",
