--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@types/gapi": "^0.0.36",
     "@types/gapi.auth2": "^0.0.47",
     "@types/reach__router": "^1.0.0",
+    "@types/react-loadable": "^5.4.0",
     "classnames": "^2.2.6",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-loadable": "^5.4.0",
     "react-scripts-ts": "2.16.0"
   },
   "scripts": {
