--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "google-contacts",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://contacts.zheeeng.me",
   "dependencies": {
     "@material-ui/core": "^1.4.1",
     "@material-ui/icons": "^2.0.0",
