Add deploy tool

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "start": "react-app-rewired start --scripts-version react-scripts-ts",
     "build": "react-app-rewired build --scripts-version react-scripts-ts",
     "test": "echo no tests at present",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.6",
@@ -30,6 +32,7 @@
     "@types/node": "^10.5.2",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
+    "gh-pages": "^1.2.0",
     "react-app-rewired": "^1.5.2",
     "typescript": "^3.0.1"
   }
